<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DestinationDetails">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:text="@string/activity_list_add"
        app:layout_constraintEnd_toStartOf="@id/activityFAB"
        app:layout_constraintBottom_toBottomOf="@id/activityFAB"
        app:layout_constraintTop_toTopOf="@id/activityFAB" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activityFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/activity_fab_description"
        app:srcCompat="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/detailsScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:id="@+id/destinations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="5dp"
                android:text="@string/destination_title_header"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDestinationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDestinationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/destination_title_hint"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/destination_lodging_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="5dp"
                android:text="@string/destination_lodging_header"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDestinationLodging"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/destination_lodging_hint"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/destination_start_date_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="5dp"
                android:text="@string/destination_start_date_header"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDestinationStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789/"
                    android:hint="@string/destination_start_date_hint"
                    android:inputType="text"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/destination_end_date_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="5dp"
                android:text="@string/destination_end_date_header"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDestinationEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789/"
                    android:hint="@string/destination_end_date_hint"
                    android:inputType="text"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="#9799B3"
                app:cardCornerRadius="20dp"
                app:cardElevation="15dp"
                app:strokeColor="#161515"
                app:strokeWidth="2dp"
                app:useCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/activityHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="24dp"
                        android:paddingBottom="8dp"
                        android:text="@string/activity_list_header"
                        android:textColor="#141313"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activityRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        tools:listitem="@layout/ui_destination_list_items" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>