<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DestinationActivityDetails">
    <ScrollView
        android:id="@+id/detailsScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">
            <TextView
                android:id="@+id/Activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_title_header"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="24dp"
                android:paddingBottom="5dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutActivityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editActivityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_title_hint"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/activity_date_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_date_header"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="24dp"
                android:paddingBottom="5dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editActivityDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_date_hint"
                    android:inputType="text"
                    android:maxLength="10"
                    android:digits="0123456789/" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>